close to fully working

--- a/analyze_loc_matches.ipynb
+++ b/analyze_loc_matches.ipynb
@@ -12,29 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "3f7962e2-b7e9-4fce-9e68-abf3139f9ba3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#df_occ = pd.read_csv('TORCH-Denton-9f30f07b-e694-4f79-83c3-54fafaa98727.csv', low_memory=False)\n",
     "#df_occ = pd.read_csv('r_dale_thomas_texas_bels.csv', low_memory=False)\n",
-    "df_occ = pd.read_csv('r-dale-thomas-all-seinet-texas-bels.csv', low_memory=False)"
+    "#df_occ = pd.read_csv('r-dale-thomas-all-seinet-texas-bels.csv', low_memory=False)\n",
+    "df_occ = pd.read_csv('ACU_485_DwC_A.csv', low_memory=False, sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "c3de6262-33d4-4dc4-a292-92b759b36714",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6005, 115)"
+       "(5240, 109)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,131 +46,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "9b44cc6e-5255-4a48-abb5-14a2f8155e06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['id',\n",
-       " 'institutioncode',\n",
-       " 'collectioncode',\n",
-       " 'ownerinstitutioncode',\n",
-       " 'basisofrecord',\n",
-       " 'occurrenceid',\n",
-       " 'catalognumber',\n",
-       " 'othercatalognumbers',\n",
-       " 'higherclassification',\n",
+       "['Unnamed: 0',\n",
+       " 'id',\n",
+       " 'institutionCode',\n",
+       " 'collectionCode',\n",
+       " 'ownerInstitutionCode',\n",
+       " 'collectionID',\n",
+       " 'basisOfRecord',\n",
+       " 'occurrenceID',\n",
+       " 'catalogNumber',\n",
+       " 'otherCatalogNumbers',\n",
+       " 'higherClassification',\n",
        " 'kingdom',\n",
        " 'phylum',\n",
        " 'class',\n",
        " 'order',\n",
        " 'family',\n",
-       " 'scientificname',\n",
-       " 'taxonid',\n",
-       " 'scientificnameauthorship',\n",
+       " 'scientificName',\n",
+       " 'taxonID',\n",
+       " 'scientificNameAuthorship',\n",
        " 'genus',\n",
        " 'subgenus',\n",
-       " 'specificepithet',\n",
-       " 'verbatimtaxonrank',\n",
-       " 'infraspecificepithet',\n",
-       " 'taxonrank',\n",
-       " 'identifiedby',\n",
-       " 'dateidentified',\n",
-       " 'identificationreferences',\n",
-       " 'identificationremarks',\n",
-       " 'taxonremarks',\n",
-       " 'identificationqualifier',\n",
-       " 'typestatus',\n",
-       " 'recordedby',\n",
-       " 'associatedcollectors',\n",
-       " 'recordnumber',\n",
-       " 'eventdate',\n",
-       " 'eventdate2',\n",
+       " 'specificEpithet',\n",
+       " 'verbatimTaxonRank',\n",
+       " 'infraspecificEpithet',\n",
+       " 'taxonRank',\n",
+       " 'identifiedBy',\n",
+       " 'dateIdentified',\n",
+       " 'identificationReferences',\n",
+       " 'identificationRemarks',\n",
+       " 'taxonRemarks',\n",
+       " 'identificationQualifier',\n",
+       " 'typeStatus',\n",
+       " 'recordedBy',\n",
+       " 'associatedCollectors',\n",
+       " 'recordNumber',\n",
+       " 'eventDate',\n",
+       " 'eventDate2',\n",
        " 'year',\n",
        " 'month',\n",
        " 'day',\n",
-       " 'startdayofyear',\n",
-       " 'enddayofyear',\n",
-       " 'verbatimeventdate',\n",
-       " 'occurrenceremarks',\n",
+       " 'startDayOfYear',\n",
+       " 'endDayOfYear',\n",
+       " 'verbatimEventDate',\n",
+       " 'occurrenceRemarks',\n",
        " 'habitat',\n",
        " 'substrate',\n",
-       " 'verbatimattributes',\n",
-       " 'fieldnumber',\n",
-       " 'eventid',\n",
-       " 'informationwithheld',\n",
-       " 'datageneralizations',\n",
-       " 'dynamicproperties',\n",
-       " 'associatedoccurrences',\n",
-       " 'associatedsequences',\n",
-       " 'associatedtaxa',\n",
-       " 'reproductivecondition',\n",
-       " 'establishmentmeans',\n",
-       " 'cultivationstatus',\n",
-       " 'lifestage',\n",
+       " 'verbatimAttributes',\n",
+       " 'fieldNumber',\n",
+       " 'eventID',\n",
+       " 'informationWithheld',\n",
+       " 'dataGeneralizations',\n",
+       " 'dynamicProperties',\n",
+       " 'associatedOccurrences',\n",
+       " 'associatedSequences',\n",
+       " 'associatedTaxa',\n",
+       " 'reproductiveCondition',\n",
+       " 'establishmentMeans',\n",
+       " 'cultivationStatus',\n",
+       " 'lifeStage',\n",
        " 'sex',\n",
-       " 'individualcount',\n",
+       " 'individualCount',\n",
        " 'preparations',\n",
-       " 'locationid',\n",
+       " 'locationID',\n",
        " 'continent',\n",
-       " 'waterbody',\n",
-       " 'islandgroup',\n",
+       " 'waterBody',\n",
+       " 'islandGroup',\n",
        " 'island',\n",
        " 'country',\n",
-       " 'stateprovince',\n",
+       " 'stateProvince',\n",
        " 'county',\n",
        " 'municipality',\n",
        " 'locality',\n",
-       " 'locationremarks',\n",
-       " 'localitysecurity',\n",
-       " 'localitysecurityreason',\n",
-       " 'decimallatitude',\n",
-       " 'decimallongitude',\n",
-       " 'geodeticdatum',\n",
-       " 'coordinateuncertaintyinmeters',\n",
-       " 'verbatimcoordinates',\n",
-       " 'georeferencedby',\n",
-       " 'georeferenceprotocol',\n",
-       " 'georeferencesources',\n",
-       " 'georeferenceverificationstatus',\n",
-       " 'georeferenceremarks',\n",
-       " 'minimumelevationinmeters',\n",
-       " 'maximumelevationinmeters',\n",
-       " 'minimumdepthinmeters',\n",
-       " 'maximumdepthinmeters',\n",
-       " 'verbatimdepth',\n",
-       " 'verbatimelevation',\n",
+       " 'locationRemarks',\n",
+       " 'localitySecurity',\n",
+       " 'localitySecurityReason',\n",
+       " 'decimalLatitude',\n",
+       " 'decimalLongitude',\n",
+       " 'geodeticDatum',\n",
+       " 'coordinateUncertaintyInMeters',\n",
+       " 'verbatimCoordinates',\n",
+       " 'georeferencedBy',\n",
+       " 'georeferenceProtocol',\n",
+       " 'georeferenceSources',\n",
+       " 'georeferenceVerificationStatus',\n",
+       " 'georeferenceRemarks',\n",
+       " 'minimumElevationInMeters',\n",
+       " 'maximumElevationInMeters',\n",
+       " 'minimumDepthInMeters',\n",
+       " 'maximumDepthInMeters',\n",
+       " 'verbatimDepth',\n",
+       " 'verbatimElevation',\n",
        " 'disposition',\n",
        " 'language',\n",
-       " 'recordenteredby',\n",
+       " 'observerUid',\n",
+       " 'processingStatus',\n",
+       " 'duplicateQuantity',\n",
+       " 'labelProject',\n",
+       " 'recordEnteredBy',\n",
+       " 'dateEntered',\n",
+       " 'dateLastModified',\n",
        " 'modified',\n",
-       " 'sourceprimarykey_dbpk',\n",
-       " 'collid',\n",
-       " 'recordid',\n",
+       " 'rights',\n",
+       " 'rightsHolder',\n",
+       " 'accessRights',\n",
+       " 'sourcePrimaryKey-dbpk',\n",
+       " 'collID',\n",
+       " 'recordID',\n",
        " 'references',\n",
-       " 'bels_match_country',\n",
-       " 'bels_interpreted_countrycode',\n",
-       " 'bels_matchwithcoords',\n",
-       " 'bels_matchverbatimcoords',\n",
-       " 'bels_matchsanscoords',\n",
-       " 'bels_decimallatitude',\n",
-       " 'bels_decimallongitude',\n",
-       " 'bels_geodeticdatum',\n",
-       " 'bels_coordinateuncertaintyinmeters',\n",
-       " 'bels_georeferencedby',\n",
-       " 'bels_georeferenceddate',\n",
-       " 'bels_georeferenceprotocol',\n",
-       " 'bels_georeferencesources',\n",
-       " 'bels_georeferenceremarks',\n",
-       " 'bels_georeference_score',\n",
-       " 'bels_georeference_source',\n",
-       " 'bels_best_of_n_georeferences',\n",
-       " 'bels_match_type']"
+       " 'bels_location_string']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
