--- a/analyze_loc_matches_local.ipynb
+++ b/analyze_loc_matches_local.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "c61251ce-f28e-4241-b613-cf19bff315a9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "3f7962e2-b7e9-4fce-9e68-abf3139f9ba3",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "c3de6262-33d4-4dc4-a292-92b759b36714",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "(1190187, 108)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,11 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "16ad9ef1-d969-420a-bf3a-41a760f6faf9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Find duplicate records\n",
+    "\n",
     "#bels_matchwithcoords\n",
     "df_matches = df_occ[df_occ['bels_location_string'].duplicated(keep=False)]\n",
     "#df_matches = df_denton[df_denton.bels_matchwithcoords\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "5bf6483c-299c-4640-8a3d-65af99aaebf6",
    "metadata": {},
    "outputs": [
@@ -197,7 +199,7 @@
        "(844925, 108)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,19 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "d1f12a70-8997-407c-84a7-cdc498679433",
    "metadata": {},
    "outputs": [],
    "source": [
     "# find records lacking geo\n",
     "#bels_decimallatitude\n",
-    "df_nogeo = df_matches[df_matches['decimalLatitude'].isna()]\n"
+    "df_nogeo = df_matches[df_matches['decimalLatitude'].isna()]\n",
+    "#TODO add loc ID - https://stackoverflow.com/a/51110205\n",
+    "#TODO find records with geo that match loc of records without geo\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "5a24c884-911f-4f9c-a589-8464f17c8a3c",
    "metadata": {},
    "outputs": [
@@ -230,7 +234,7 @@
        "(556023, 108)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "19da07d8-d630-4e7d-aa70-68943f56db2b",
    "metadata": {},
    "outputs": [],
@@ -251,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "d53838b1-eaa3-462e-9393-a4b164a35032",
    "metadata": {},
    "outputs": [],
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "5945b44a-537a-4ba1-9981-fad7fe21f4e0",
    "metadata": {},
    "outputs": [
@@ -272,7 +276,7 @@
        "(288902, 108)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "b1f6109a-e83e-474a-9e30-d6b17b79d09b",
    "metadata": {},
    "outputs": [],
@@ -293,38 +297,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "12da5e88-0541-430d-9ddb-d4f5d3311d77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dup_locs_all = df_matches.pivot_table(index = ['bels_location_string'], aggfunc ='size') "
+    "dup_loc_count = df_matches.pivot_table(index = ['bels_location_string'], aggfunc ='size')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "9cb76bf0-a0a0-4f2c-bb18-dd07166b75f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dup_locs_all.to_csv('torch_dup_locs_all.csv')"
+    "dup_loc_count.to_csv('torch_dup_loc_count.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "c297e01a-fe76-4f38-982c-a33f8b181783",
    "metadata": {},
    "outputs": [],
    "source": [
     "#dups = df.pivot_table(index = ['Course'], aggfunc ='size') \n",
-    "dup_locs = df_nogeo.pivot_table(index = ['bels_location_string'], aggfunc ='size') "
+    "#dup_locs = df_nogeo.pivot_table(index = ['bels_location_string'], aggfunc ='size') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "2102162a-07b1-49e4-8d03-3cfb21b56d64",
    "metadata": {},
    "outputs": [
@@ -339,22 +343,22 @@
       "oklahoma10milesnoflimestonegapindianterritory                          2\n",
       "oklahoma2-4minofboisecityonroute287.areaofnicegeologysmallbuttes       2\n",
       "                                                                    ... \n",
-      "texaszavalaushwy83,11minofcrystalcity                                  2\n",
       "texaszavalaushwy83,nuecesriverbottom9minoflapryor                      2\n",
+      "texaszavalauvaldeca12mis                                               2\n",
       "texaszavalauvaldecarrizospringsroad                                    2\n",
       "texaszavalauvaldecrystalcity                                           3\n",
       "texaszavalazavalanuecesriver                                           3\n",
-      "Length: 87337, dtype: int64\n"
+      "Length: 128962, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(dup_locs)"
+    "print(dup_loc_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "c4ce0341-1a9a-4f7e-82ce-87ed8826974f",
    "metadata": {},
    "outputs": [
@@ -364,7 +368,7 @@
        "(87337,)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "6096a3eb-7b9a-450b-919b-ea69cc435d42",
    "metadata": {},
    "outputs": [],
@@ -745,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
