--- a/analyze_loc_matches_local.ipynb
+++ b/analyze_loc_matches_local.ipynb
@@ -675,8 +675,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
+   "id": "5ec847ac-74fa-4d42-ba32-cd25bcaa3ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(631546, 64)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nogeo.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "id": "947c47de-99ed-4449-83c7-533c00b5d059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find dup locs without geo but have other dups that have geo\n",
+    "df_nogeo_with_geolocdups = df_nogeo[df_nogeo['loc_id'].isin(df_geo['loc_id'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "69e96a46-e482-47b0-aa4c-6d79c83aa71a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(235572, 64)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nogeo_with_geolocdups.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "329b18c2-fce5-4c4e-9f63-5abfe55f8d50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if write_csv:\n",
+    "    df_nogeo_with_geolocdups.to_csv('TORCH_nogeo_with_geolocdups.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c46eb5c5-5d7b-4a1c-962b-ecf33ebcfa48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO \n",
+    "# drop locs that are state + county\n",
+    "# ddrop locs that are state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "2eda1b94-a599-44da-bf0a-58106ba9dd17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop 'texas' only\n",
+    "#df_nogeo_with_geolocdups_nostates = df_nogeo_with_geolocdups[df_nogeo_with_geolocdups[column1] != df[column2]]\n",
+    "\n",
+    "df_nogeo_with_geolocdups_nostates = df_nogeo_with_geolocdups[~df_nogeo_with_geolocdups.apply(lambda row: row['stateProvince'].lower() == row['bels_location_string'].lower(), axis=1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "7348adfa-dbbb-40d2-9cb1-4c8fecb0a7a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(219652, 64)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nogeo_with_geolocdups_nostates.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "b2d147df-6d7d-488e-b4eb-a14780cd6b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if write_csv:\n",
+    "    df_nogeo_with_geolocdups_nostates.to_csv('TORCH_nogeo_with_geolocdups_nostates.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "367ad0fd-6c62-424b-85b5-f2cbefc031bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove state + county matches\n",
+    "df_nogeo_with_geolocdups_nostatecounty = df_nogeo_with_geolocdups_nostates[~df_nogeo_with_geolocdups_nostates.apply(lambda row: (str(row['stateProvince']) + str(row['county'])).lower() == row['bels_location_string'].lower(), axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "8c3e6eec-044f-4d02-9535-2537c2f9b7c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(151483, 64)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nogeo_with_geolocdups_nostatecounty.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "40985a08-777c-4d6a-9bf5-0225c7c5dca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if write_csv:\n",
+    "    df_nogeo_with_geolocdups_nostatecounty.to_csv('TORCH_nogeo_with_geolocdups_nostatecounties.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d87d2842-c8f1-4db4-af47-eb0bdfedc2f9",
    "metadata": {},
    "outputs": [],
    "source": []
