moving old files

--- a/analyze_loc_matches_local_BRIT-UT.ipynb
+++ b/analyze_loc_matches_local_BRIT-UT.ipynb
@@ -1054,8 +1054,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "cc6294df-2e4a-4c0e-9f37-3bf958f22920",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21352, 52)"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_torch_texas_transpecos_zero_geo.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "b4bcdf87-1c17-45ac-be8c-332fcc03635e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_torch_texas_transpecos_BRIT_zero_geo = df_torch_texas_transpecos_zero_geo[(df_torch_texas_transpecos_zero_geo['institutionCode'].isin(BRIT_plus))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "eb5b6f15-4af6-4eda-9a22-e73d080bd763",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7778, 52)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_torch_texas_transpecos_BRIT_zero_geo.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "936ec308-432f-460c-b941-2cb71b0ba9ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_torch_texas_transpecos_UT_zero_geo = df_torch_texas_transpecos_zero_geo[(df_torch_texas_transpecos_zero_geo['institutionCode'].isin(UT_plus))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "c3e71ffd-3722-42d5-9a23-0c23aa90a569",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13574, 52)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_torch_texas_transpecos_UT_zero_geo.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "2d42c0ce-51f4-4c21-ae2c-bf8a19148881",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5871"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# unique loc in TP\n",
+    "#df['hID'].nunique()\n",
+    "df_torch_texas_transpecos_zero_geo['loc_id'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "b9bb25e0-9566-42ee-8bcc-afb70ad64be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare to total number of records held by BRIT and UT\n",
+    "df_transpecos_occ = df_occ[(df_occ['county'].isin(tx_transpecos_counties))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "eeacddef-c778-4b38-b7e1-3010bf6d234d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(68173, 49)"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_transpecos_occ.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea6690f1-fd09-445a-89aa-51ecfeb7d135",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31454a2c-fd47-45a6-ad41-e6caff73c6ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b062dc51-d22c-4cec-9363-da7272eef394",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2e9070a-6750-4ce6-9a76-58aff817c678",
    "metadata": {},
    "outputs": [],
    "source": []
