--- a/BELS_processor.ipynb
+++ b/BELS_processor.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "0fc60c63-5041-463c-a6cf-ba1a3675aad0",
    "metadata": {},
    "outputs": [],
@@ -113,12 +113,15 @@
     "        total_groups = group['bels_location_id'].nunique()\n",
     "        groups_with_coords = group.groupby('bels_location_id')['coordinate_count'].first()\n",
     "        total_records = len(group)\n",
+    "        records_with_coords = group['decimalLatitude'].notna().sum()\n",
     "        \n",
     "        return pd.Series({\n",
     "            'total_location_groups': total_groups,\n",
     "            'groups_with_coordinates': (groups_with_coords > 0).sum(),\n",
     "            'groups_without_coordinates': (groups_with_coords == 0).sum(),\n",
-    "            'total_records': total_records\n",
+    "            'total_records': total_records,\n",
+    "            'records_with_coordinates': records_with_coords,\n",
+    "            'records_without_coordinates': total_records - records_with_coords\n",
     "        })\n",
     "    \n",
     "    return df.groupby(['stateProvince', 'county']).apply(get_stats, include_groups=False).reset_index()"
@@ -1701,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "23cc155d-8058-4eac-9730-3bec920e7375",
    "metadata": {},
    "outputs": [],
@@ -1711,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "63c42b1b-f3da-438f-8f32-b0f6804a4fd4",
    "metadata": {},
    "outputs": [
@@ -1742,6 +1745,8 @@
        "      <th>groups_with_coordinates</th>\n",
        "      <th>groups_without_coordinates</th>\n",
        "      <th>total_records</th>\n",
+       "      <th>records_with_coordinates</th>\n",
+       "      <th>records_without_coordinates</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1753,6 +1758,8 @@
        "      <td>16</td>\n",
        "      <td>19</td>\n",
        "      <td>38</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1762,6 +1769,8 @@
        "      <td>7</td>\n",
        "      <td>4</td>\n",
        "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1771,6 +1780,8 @@
        "      <td>18</td>\n",
        "      <td>19</td>\n",
        "      <td>41</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1780,6 +1791,8 @@
        "      <td>8</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1789,9 +1802,13 @@
        "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1807,6 +1824,8 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>394</th>\n",
@@ -1816,6 +1835,8 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>395</th>\n",
@@ -1825,6 +1846,8 @@
        "      <td>7</td>\n",
        "      <td>9</td>\n",
        "      <td>17</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
@@ -1834,6 +1857,8 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397</th>\n",
@@ -1843,10 +1868,12 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>398 rows × 6 columns</p>\n",
+       "<p>398 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1863,23 +1890,36 @@
        "396         Texas      Zavala                      4                        1   \n",
        "397         Texas  not listed                      4                        0   \n",
        "\n",
-       "     groups_without_coordinates  total_records  \n",
-       "0                            19             38  \n",
-       "1                             4             11  \n",
-       "2                            19             41  \n",
-       "3                             2             10  \n",
-       "4                             4             13  \n",
-       "..                          ...            ...  \n",
-       "393                           2              3  \n",
-       "394                           1              3  \n",
-       "395                           9             17  \n",
-       "396                           3              4  \n",
-       "397                           4              6  \n",
+       "     groups_without_coordinates  total_records  records_with_coordinates  \\\n",
+       "0                            19             38                        19   \n",
+       "1                             4             11                         7   \n",
+       "2                            19             41                        21   \n",
+       "3                             2             10                         8   \n",
+       "4                             4             13                         6   \n",
+       "..                          ...            ...                       ...   \n",
+       "393                           2              3                         0   \n",
+       "394                           1              3                         2   \n",
+       "395                           9             17                         7   \n",
+       "396                           3              4                         1   \n",
+       "397                           4              6                         0   \n",
        "\n",
-       "[398 rows x 6 columns]"
+       "     records_without_coordinates  \n",
+       "0                             19  \n",
+       "1                              4  \n",
+       "2                             20  \n",
+       "3                              2  \n",
+       "4                              7  \n",
+       "..                           ...  \n",
+       "393                            3  \n",
+       "394                            1  \n",
+       "395                           10  \n",
+       "396                            3  \n",
+       "397                            6  \n",
+       "\n",
+       "[398 rows x 8 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
