--- a/BELS_summarize.ipynb
+++ b/BELS_summarize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "10d5c55b-a50b-4051-8c93-320ba4fa31d0",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'\\n#Loads a CSV DwC occurrence file that has been augmented with BELS locality strings\\n# based on some processes in analyze_loc_matches_local.ipynb\\n# focusing on summarization to help select candidate counties\\n'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "c61251ce-f28e-4241-b613-cf19bff315a9",
    "metadata": {},
    "outputs": [],
@@ -41,21 +41,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "3f7962e2-b7e9-4fce-9e68-abf3139f9ba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/data/TORCH-data_snapshots_TX_OK_2024-12-06/'\n",
+    "#input_path = '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/data/TORCH-data_snapshots_TX_OK_2024-12-06/'\n",
+    "input_path = '/media/jbest/data3/BRIT_git/TORCH_georeferencing/data/TORCH-data_snapshots_TX_OK_2024-12-06/'\n",
     "input_filename = 'torch_bels_metrics.tsv'\n",
     "bels_locs_path = Path(input_path) / input_filename\n",
     "#bels_locs_path = '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/data/TORCH-data_snapshots_TX_OK_2024-12-06/torch_bels_locs.tsv'\n",
-    "df_occ = pd.read_csv(bels_locs_path, low_memory=False, sep='\\t')"
+    "#df_occ = pd.read_csv(bels_locs_path, low_memory=False, sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c70cc0bc-3e4d-46fb-8aa9-113e88d21fae",
    "metadata": {},
    "outputs": [],
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "c3de6262-33d4-4dc4-a292-92b759b36714",
    "metadata": {},
    "outputs": [
@@ -76,7 +77,7 @@
        "(1146433, 124)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "bb4b35d4-dd6d-4de5-a3fa-5809c4638bcf",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "d8ce3fd1-65a5-4901-b8a6-c7a74eb54116",
    "metadata": {},
    "outputs": [
@@ -110,7 +111,7 @@
        "(1146433, 67)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "16ad9ef1-d969-420a-bf3a-41a760f6faf9",
    "metadata": {},
    "outputs": [],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "id": "5bf6483c-299c-4640-8a3d-65af99aaebf6",
    "metadata": {},
    "outputs": [
@@ -142,7 +143,7 @@
        "(812448, 67)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "d3e272de-5508-4d96-8a46-4dbeb4bf53fd",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "74ff8d1a-59f4-486b-9c48-00d347f4656e",
    "metadata": {},
    "outputs": [],
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "3d5814dd-3986-46a7-b550-264c05a9e797",
    "metadata": {},
    "outputs": [
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "c25d8841-c31c-4b0a-be13-b7505cd3b7ad",
    "metadata": {},
    "outputs": [
@@ -257,10 +258,10 @@
      "text": [
       "\n",
       "Original DataFrame:\n",
-      "(812448, 64)\n",
+      "(812448, 69)\n",
       "\n",
       "Filtered DataFrame (locations with at least one set of coordinates):\n",
-      "(312367, 64)\n"
+      "(312367, 69)\n"
      ]
     }
    ],
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "2eda1b94-a599-44da-bf0a-58106ba9dd17",
    "metadata": {},
    "outputs": [],
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "id": "367ad0fd-6c62-424b-85b5-f2cbefc031bd",
    "metadata": {},
    "outputs": [],
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "id": "968bd2a7-0617-419e-a105-944b4a2ff6fc",
    "metadata": {},
    "outputs": [],
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "14db5a8d-fa93-44d8-a924-0e454f9645e0",
    "metadata": {},
    "outputs": [],
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "a3685e5e-955d-486b-a634-126ec19d4b22",
    "metadata": {},
    "outputs": [],
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "id": "0b0a1d97-e621-456b-a7c0-1ffb3b9974a1",
    "metadata": {},
    "outputs": [],
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "id": "c1b1d790-ac90-45cf-b354-7eb8ee1031be",
    "metadata": {},
    "outputs": [],
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "id": "715ea976-647d-4d03-bc6c-2782d9ad4f70",
    "metadata": {},
    "outputs": [
@@ -881,7 +882,7 @@
        "[500081 rows x 71 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "id": "b35e43b9-5482-45d9-af0c-2342959bd0ea",
    "metadata": {},
    "outputs": [],
@@ -902,13 +903,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "id": "7cef55ee-bc01-4420-be11-669250d6d35a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# mean only\n",
-    "county_summary_v1 = df_no_geo_normalized.groupby(['stateProvince', 'county_normalized']).agg(\n",
+    "#county_summary_v1 = df_no_geo_normalized.groupby(['stateProvince', 'county_normalized']).agg(\n",
+    "county_summary = df_no_geo_normalized.groupby(['stateProvince', 'county_normalized']).agg(\n",
     "    total_locations=('loc_id', 'count'),\n",
     "    unique_locations=('loc_id', 'nunique'),\n",
     "    dup_loc_count=('dup_loc_count', 'max'),\n",
@@ -919,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "id": "e197a825-c3d2-41ee-a1a2-7577dbf306a4",
    "metadata": {},
    "outputs": [],
@@ -938,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "id": "c2b01439-db57-4e92-8ed1-b7b97bdba928",
    "metadata": {},
    "outputs": [],
@@ -951,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "id": "e47802bb-746e-4403-951d-c515490b55fc",
    "metadata": {},
    "outputs": [],
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "id": "d2cfde99-f837-4add-8ff0-799fd4b7ba6c",
    "metadata": {},
    "outputs": [],
@@ -990,12 +992,16 @@
     "    # File paths for each state\n",
     "    state_files = {\n",
     "        'Texas': {\n",
-    "            'assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/texas_counties_assigned.txt',\n",
-    "            'not_assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/texas_counties_not_assigned.txt'\n",
+    "            #'assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/texas_counties_assigned.txt',\n",
+    "            'assigned': '/media/jbest/data3/BRIT_git/TORCH_georeferencing/texas_counties_assigned.txt',\n",
+    "            #'not_assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/texas_counties_not_assigned.txt'\n",
+    "            'not_assigned': '/media/jbest/data3/BRIT_git/TORCH_georeferencing/texas_counties_not_assigned.txt'\n",
     "        },\n",
     "        'Oklahoma': {\n",
-    "            'assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/oklahoma_counties_assigned.txt',\n",
-    "            'not_assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/oklahoma_counties_not_assigned.txt'\n",
+    "            #'assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/oklahoma_counties_assigned.txt',\n",
+    "            'assigned': '/media/jbest/data3/BRIT_git/TORCH_georeferencing/oklahoma_counties_assigned.txt',\n",
+    "            #'not_assigned': '/mnt/DATA3-4TB/BRIT_git/TORCH_georeferencing/oklahoma_counties_not_assigned.txt'\n",
+    "            'not_assigned': '/media/jbest/data3/BRIT_git/TORCH_georeferencing/oklahoma_counties_not_assigned.txt'\n",
     "        }\n",
     "    }\n",
     "    \n",
@@ -1037,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "id": "cfb94228-a7ee-4cb5-8292-13bb99c23eff",
    "metadata": {},
    "outputs": [],
@@ -1050,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "id": "cb4a639e-eacc-4db4-9229-f2f72657fe6e",
    "metadata": {},
    "outputs": [],
@@ -1060,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "id": "d7b7dc81-3ca9-465f-9a3c-d04d89e1b3b3",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "id": "d4965032-a619-46cb-b55b-87db89ae7b38",
    "metadata": {},
    "outputs": [],
@@ -1080,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "id": "795aa96b-2e6e-45e5-bf8f-bd41cb5bc87d",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "id": "c6c5975b-0f5f-4ac4-a7c2-30635843facb",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "id": "c6bf28a6-3985-4b59-8ed0-ee144854e349",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
